playing with LaTex

--- a/Practical1/writeup/writeup.tex
+++ b/Practical1/writeup/writeup.tex
@@ -18,4 +18,24 @@
 
 Hi there
 
+Congratulations! You received a grade of 100\% on your latestexamination.
+
+You owe me \$10.00 and it's about time you sent it to me!
+
+
+\par I like \TeX! Once you get the hang of it, TEX is really easy to use --- You just have tomaster the \TeX nical aspects... \bf or else \rm try something \tt else \rm \dots
+
+``No\"el''
+\par
+`Caban-\`a-sucre'
+\par
+
+$
+\alpha\theta
+$
+
+$
+x^2_2
+(1/m)\sum
+$
 \end{document}  
