--- a/Practical1/writeup/writeup.tex
+++ b/Practical1/writeup/writeup.tex
@@ -38,4 +38,18 @@ I subsequently modified the code to use K-Medoids, choosing one of the sample da
 
 I then attempted using K-Medoids with the CIFAR-10 Image Data, using the Matlab version of the data with Octave. The training data consists of a 10000x3072 matrix of UInt8. Each row is a 32x32x3 (=3072) color image, consisting of 1024 red, 1024 green and 1024 blue elements. There are 10 classes in the set (``airplane'', ``automobile'', etc.), so setting K=10 was a rational first step.
 
+Percentage Distribution of K values after normalization and 10 iterations
+
+06
+05
+04
+26
+14
+13
+05
+04
+03
+15
+
+
 \end{document}  
