practice questions; writeup tweaks

--- a/Practical1/writeup/writeup.tex
+++ b/Practical1/writeup/writeup.tex
@@ -18,7 +18,7 @@
 
 %\subsection*{Basic K-Means}
 
-\par Initially I used a K-Means implementation in Octave I had written for a previous course.\footnote{Machine Learning, Coursera, Prof. Andrew Ng, Completed Jan 2014, \url{https://class.coursera.org/ml-004}} While this implementation was sufficient for the prior course's Dataset, when I tested it with five clusters of random data, K=5 and random initial centroids, one of the centroids would frequently not converge on any points.
+\par As a warmup, I synthesized five clusters of data.  I then used a K-Means implementation in Octave I had written for a previous course.\footnote{Machine Learning, Coursera, Prof. Andrew Ng, Completed Jan 2014, \url{https://class.coursera.org/ml-004}} While this implementation was sufficient for the prior course's provided dataset, when I tested it the synthesized data set, K=5 and random initial centroids, one of the centroids would frequently not converge on any points.
 
 \begin{figure}[h!] % consider removing ! to  improve formatting and put back in subsection
 \centering
@@ -50,6 +50,8 @@ Percentage Distribution of K values after normalization and 10 iterations
 04
 03
 15
+
+
 
 
 \end{document}  
