trying PCI source

--- a/Practical1/writeup/writeup.tex
+++ b/Practical1/writeup/writeup.tex
@@ -1,5 +1,6 @@
 \documentclass[11pt, oneside]{article}   	% use "amsart" instead of "article" for AMSLaTeX format
 \usepackage{geometry}                		% See geometry.pdf to learn the layout options. There are lots.
+\usepackage{textcomp}
 \usepackage{hyperref}  % TODO: see page 94 of latex book
 \geometry{letterpaper}                   		% ... or a4paper or a5paper or ... 
 %\usepackage[parfill]{parskip}    		% Activate to begin paragraphs with an empty line rather than an indent
@@ -51,7 +52,9 @@ Percentage Distribution of K values after normalization and 10 iterations
 03
 15
 
+	
+\section*{Recommender System}
 
-
+Using algorithm from \emph{Programming Collective Intelligence}.\footnote{Programming Collective Intelligence by Toby Segaran. \textsuperscript{\textcopyright} 2007 Toby Segaran, 978-0-596-52932-1.}
 
 \end{document}  
