--- a/Practical1/writeup/writeup.tex
+++ b/Practical1/writeup/writeup.tex
@@ -57,4 +57,6 @@ Percentage Distribution of K values after normalization and 10 iterations
 
 Using algorithm from \emph{Programming Collective Intelligence}.\footnote{Programming Collective Intelligence by Toby Segaran. \textsuperscript{\textcopyright} 2007 Toby Segaran, 978-0-596-52932-1.}
 
+Pearson distance
+
 \end{document}  
