adding README; cleaning up

--- a/Practical1/writeup/writeup.tex
+++ b/Practical1/writeup/writeup.tex
@@ -68,7 +68,9 @@ The first was using Pearson distance from \emph{Programming Collective Intellige
 \caption{Pearson Correlation Coefficient Approximation}
 \end{figure}
 
-Unfortunately Pearson distance 
+Unfortunately Pearson distance is not very effective with sparse data. Given that the training consisted of only 200000 ratings for 131378 books x 12787 users, the ratings were sparse, so Pearson was not very effective at all.
+
+
 
 
 \end{document}  
