centralizing TODOs in the README

--- a/Practical1/README
+++ b/Practical1/README
@@ -1,7 +1,9 @@
 TODO:
 . clean up warmup directory
 . finish write up
-
+  . warmup section
+  . final algorithms
+. make python main/runCosine parameterize for sim vs validation set
 
 CSCI-E181 Spring 2014, David Wihl
 
@@ -39,7 +41,6 @@ cosine.py	      - cosine distance implementation
 error_log	      - internal record keeping of score progress
 global_mean.py	      - course supplied
 main.py		      - main program
-pci
 pearson.py	      - partially complete Pearson implementation
 pred-full.csv	      - generated score results
 pred-global-mean.csv  - course supplied
