--- a/Practical1/README
+++ b/Practical1/README
@@ -36,6 +36,8 @@ Relevant remaining contents of the directory:
 README 	  	      - this file
 cofi.py		      - partially completed implementation of non-normalized Collaborative
 		        filtering translated from Octave
+cofiCostFunction.m    - vectorized Collaborative Filtering with Gradient Descent and regularization 
+		        from my prior Coursera class. Not used. (Octave)
 cosine.py	      - cosine distance implementation
 error_log	      - internal record keeping of score progress
 main.py		      - main program
@@ -51,8 +53,6 @@ main.m		       - main Octave program
 findClosestCentroids.m - non-vectorized implementation of finding closest centroids (Octave)
 computeCentroids.m     - non-vectorized implementation of moving centroids (Octave)
 runkMeans.m	       - iterate and generate plots (Octave)
-cofiCostFunction.m     - vectorized Collaborative Filtering with Gradient Descent and regularization 
-		         from my prior Coursera class (Octave)
 
 
 ./writeup directory:
