parameterize correct sim vs validation set run

--- a/Practical1/README
+++ b/Practical1/README
@@ -1,10 +1,9 @@
 TODO:
-. make python main/runCosine parameterize for sim vs validation set
 . make better algorithms!
-. clean up warmup directory
 . finish write up
   . warmup section
   . final algorithms
+  . replace screen shots by LaTex formulae in writeup
 
 CSCI-E181 Spring 2014, David Wihl
 
